--- a/packages/opentelemetry-instrumentation-commander/package.json
+++ b/packages/opentelemetry-instrumentation-commander/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "test": "mocha",
     "test:watch": "mocha --watch",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "prepack": "npm run clean && npm run build"
   },
   "keywords": [
     "opentelemetry",
