--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "npm run build -w packages/opentelemetry-instrumentation-commander && npm run build -w packages/example-cli",
+    "build": "npm run build -w packages/opentelemetry-instrumentation-commander && npm run build -w packages/example-cli && npm run build -w packages/example-cli-esm",
     "test": "npm run test -w packages/opentelemetry-instrumentation-commander",
     "clean": "rm -rf packages/*/dist packages/*/node_modules node_modules",
     "pack:instrumentation": "npm pack -w packages/opentelemetry-instrumentation-commander",
